--- a/index.css
+++ b/index.css
@@ -30,7 +30,8 @@ h1 {
 }
 
 h2 {
-  margin-bottom: 80px;
+  height: 50px;
+  margin-bottom: 90px;
   font-size: 40px;
   font-weight: 400;
   line-height: normal;
@@ -95,7 +96,8 @@ button {
   }
 
   h2 {
-    margin-bottom: 60px;
+    height: 35px;
+    margin-bottom: 65px;
     font-size: 24px;
   }
 
